clusters/homelab/kubernetes/apps/observability/grafana/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: grafana
spec:
  hostnames:
    - "grafana.${SECRET_DOMAIN}"
  parentRefs:
    - kind: Gateway
      name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: grafana
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /
